--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "write_ini_file"
     ],
     "homepage": "https://github.com/cconkrig/WriteIniFile",
-    "license": "GPL-3.0",
+    "license": "GPL-3.0-only",
     "authors": [
         {
             "name": "cconkrig",
